# mdlogger

./: Cargo.toml  README.md  run_tests.sh
src/: console.rs  constants.rs  external_commands.rs  interfaces.rs  lib.rs  logmessage.rs  mdlogger-test-helper.rs  network.rs  rollingfile.rs  types.rs  utils.rs
test_files/: console.ini  console_missing_redirection.ini  console_wrong_log_message_format.ini  console_wrong_redirection.ini  log_handler_chain_loop.ini  missing_root_handler.ini  network_tcp_ipv4.ini  network_tcp_ipv6.ini  network_udp_ipv4_multicast.ini  network_udp_ipv4_multicast_specific_itf.ini  network_udp_ipv4_unicast.ini  network_udp_ipv6_multicast.ini  network_udp_ipv6_multicast_specific_itf.ini  network_udp_ipv6_unicast.ini  network_wrong_addrmcasttipv4_itfipv6.ini  network_wrong_addrmcasttipv6_itfipv4.ini  network_wrong_ipaddress_multicast_if.ini  network_wrong_multicast_if.ini  network_wrong_proto_mcast_addr_unicast.ini  network_wrong_proto_unicast_addr_mcast.ini  network_wrong_protocol.ini  network_wrong_remote_address.ini  network_wrong_remote_port.ini  rollingfile.ini  rollingfile_wrong_basename.ini  rollingfile_wrong_maxsize.ini  rollingfile_wrong_sizeum.ini  unix_domain_tcp.ini  unix_domain_udp.ini  unix_domain_undefined_env_var.ini  unix_domain_wring_protocol.ini  unix_domain_wrong_protocol.ini  wrong_timestamp_format.ini
